--- a/Maze.csproj
+++ b/Maze.csproj
@@ -45,11 +45,13 @@
   <ItemGroup>
     <Compile Include="Controllers\Game.cs" />
     <Compile Include="Controllers\Map.cs" />
+    <Compile Include="Controllers\UI.cs" />
     <Compile Include="Models\Cash.cs" />
-    <Compile Include="Models\Door.cs" />
+    <Compile Include="Models\Doors.cs" />
     <Compile Include="Models\Exit.cs" />
     <Compile Include="Models\Life.cs" />
     <Compile Include="Models\Player.cs" />
+    <Compile Include="Models\Trap.cs" />
     <Compile Include="Models\Wall.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
