--- a/Maze.csproj
+++ b/Maze.csproj
@@ -59,6 +59,7 @@
     <None Include="App.config" />
     <None Include="maps\map1.map" />
     <None Include="maps\map2.map" />
+    <None Include="maps\map7.map" />
     <None Include="maps\map6.map" />
     <None Include="maps\map5.map" />
     <None Include="maps\map4.map" />
