--- a/Maze.csproj
+++ b/Maze.csproj
@@ -45,9 +45,14 @@
   <ItemGroup>
     <Compile Include="Controllers\Game.cs" />
     <Compile Include="Controllers\Map.cs" />
-    <Compile Include="Controllers\UI.cs" />
+    <Compile Include="Controllers\Music.cs" />
+    <Compile Include="Controllers\State.cs" />
+    <Compile Include="Controllers\Timer.cs" />
+    <Compile Include="Controllers\GraphicalUserInterface.cs" />
     <Compile Include="Models\Cash.cs" />
+    <Compile Include="Models\EmptyCell.cs" />
     <Compile Include="Models\Exit.cs" />
+    <Compile Include="Models\GameObject.cs" />
     <Compile Include="Models\Life.cs" />
     <Compile Include="Models\Player.cs" />
     <Compile Include="Models\Trap.cs" />
