maos are readable,Classes process player's moves separatly,Info about path and amount of maps is in json,Reflexive loading of map

--- a/Maze.csproj
+++ b/Maze.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,8 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\Game.cs" />
+    <Compile Include="Controllers\GameInfo.cs" />
+    <Compile Include="Controllers\GetRadiusResult.cs" />
     <Compile Include="Controllers\Map.cs" />
-    <Compile Include="Controllers\Music.cs" />
     <Compile Include="Controllers\State.cs" />
     <Compile Include="Controllers\Timer.cs" />
     <Compile Include="Controllers\GraphicalUserInterface.cs" />
@@ -62,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="GameInfo.json" />
     <None Include="maps\map1.map" />
     <None Include="maps\map2.map" />
     <None Include="maps\map7.map" />
@@ -69,6 +74,7 @@
     <None Include="maps\map5.map" />
     <None Include="maps\map4.map" />
     <None Include="maps\map3.map" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
