--- a/Maze.csproj
+++ b/Maze.csproj
@@ -47,11 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\Game.cs" />
-    <Compile Include="Controllers\GameInfo.cs" />
-    <Compile Include="Controllers\GetRadiusResult.cs" />
+    <Compile Include="HelperClasses\GameInfo.cs" />
+    <Compile Include="HelperClasses\GetRadiusResult.cs" />
     <Compile Include="Controllers\Map.cs" />
-    <Compile Include="Controllers\State.cs" />
-    <Compile Include="Controllers\Timer.cs" />
+    <Compile Include="HelperClasses\State.cs" />
+    <Compile Include="HelperClasses\Timer.cs" />
     <Compile Include="Controllers\GraphicalUserInterface.cs" />
     <Compile Include="Models\Cash.cs" />
     <Compile Include="Models\EmptyCell.cs" />
@@ -76,5 +76,6 @@
     <None Include="maps\map3.map" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
